fixed overlay unusual width & overflow in terra-tree for log-view

--- a/src/app/overlay/terra-overlay.component.scss
+++ b/src/app/overlay/terra-overlay.component.scss
@@ -13,7 +13,7 @@
 .modal-dialog
 {
     margin: 0;
-    position: absolute;
+    position: relative;
     transform: translate(-50%, -50%);
     left: 50%;
     top: 50%;
